--- a/admin.html
+++ b/admin.html
@@ -1,1 +1,154 @@
-...
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GSI2 24-25</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+.gen{
+    color:red;
+    margin:1px;
+}
+.liens{
+    display: flex;
+    justify-content: space-between;
+}
+.result{
+    margin-bottom:10px;
+}
+.argu{
+    border-top: thick double #32a1ce;
+    padding: 6px;
+}
+.etu{
+    border-top: thick double #ce3232;
+    padding: 6px;
+}
+
+    </style>
+</head>
+<body>
+    <h1 id="nomAuteur">Travaux des étudiants pour le cours GSI 2 : Système d'information et développement Web</h1>
+    <div id="data-container"></div>
+
+    <script>
+        // Load JSON data
+        d3.csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vTBQyz85rNI_H2ggOJzro19uGCFCRqrJHJXdFGlyq6aCxo6qlBn66pK1Bgn6ee2VZW_YGPprJIikyaU/pub?gid=755898939&single=true&output=csv").then(function(data) {
+            // Select the container
+            var container = d3.select("#data-container");
+
+            // Append data to the container
+            let divEtu = container.selectAll("div")
+                .data(data)
+                .enter()
+                .append("div")
+                    .attr("id",d=>"etu"+d["Votre identifiant omeka"])
+                    .attr("class","etu");
+            
+            divEtu.append("h2").text(function(d) { return d["Votre nom et prénom"]; });
+            //construction du tableau pour chaque étudiant
+            let liensEtu = divEtu.append('div').attr('id',(d,i)=>"liensEtu"+i).attr('class','liens');         
+            liensEtu.append("a").attr("href",d=>"https://github.com/"+d["Votre login github"]+"/GSI2_SystemInfo_25-26/")
+                .text(d=>d["Votre login github"]+ " sources exercices")
+            liensEtu.append("a").attr("href",d=>"https://"+d["Votre login github"]+".github.io/GSI2_SystemInfo_25-26/test.html")
+                .text(d=>"Page Test")
+            liensEtu.append("a").attr("href",d=>"https://"+d["Votre login github"]+".github.io/GSI2_SystemInfo_25-26/arguments.html")
+                .text(d=>"Page arguments")
+            liensEtu.append('div').append('button')
+                    .text('Voir les arguments')
+                    .on('click',showArguments);
+
+        }).catch(function(error) {
+            console.error('Error loading or parsing data:', error);
+        });
+
+
+        function showArguments(e,d){
+            console.log(e,d);
+            //supprimer les anciennes informations
+            d3.select('#etu'+d["Votre identifiant omeka"]).select('ul').remove();
+            //récupérer d'omk la lsite des argument d'un participant
+            d3.json("https://argument.generateur.art/api/items?resource_class_id=107&owner_id="+d["Votre identifiant omeka"])
+            .then(rs=>{
+                console.log(rs);
+                //ajouter la liste des argument du participant
+                let ulEtuArgu = d3.select('#etu'+d["Votre identifiant omeka"]).append('ul'),
+                //ajoute chaque argument
+                argus = ulEtuArgu.selectAll('li').data(rs).enter().append('li')
+                    .attr('class','argu')
+                    .attr('id',d=>'argu'+d['o:id']),
+                //ajouter les infos de l'argument
+                liensArgu = argus.append('div').attr('id',(d,i)=>"liensArgu"+i).attr('class','liens'),         
+                                //les possibilités génératives
+                //le div des propriétés de l'argument
+                propsArgu = argus.append('div').attr('id',d=>"propArgu"+d['o:id']).attr('class','props'),
+                props = ["o:created","dcterms:description","argu:hasFamilleArgu","argu:hasRegistre","dcterms:subject"],
+                //ajoute les propriétés de l'argument
+                liProps = propsArgu.append('ul').selectAll('li').data(d=>props.map(p=>{
+                    return {'p':p,d:d};
+                })).enter().append('li'),
+                liensVirtual = argus.append('div').attr('id',d=>"virtualArgu"+d['o:id']).attr('class','liens')
+                    .selectAll('span').data(d=>d["argu:generateur"].slice(1)).enter().append('span').html(d=>{
+                        if(d.type=='resource')
+                            return "<a target-'_blank' href='"+d['@id'].replace('api/items','admin/item')+"'>"+d.display_title+"</a>";
+                        else 
+                            return d['@value']; 
+                });
+
+                liProps.selectAll('p').data((d,i)=>Array.isArray(d.d[d.p])?d.d[d.p]:[d.d[d.p]]).enter().append('p').html(d=>{
+                    if(!d)return 'vide';
+                    let s = (d.property_label ? d.property_label+' = ' : '')+(d.display_title ? d.display_title : d["@value"]);
+                    return '<span>'+s+'</span>'
+                })
+
+                //Ajoute le lien vers l'argument dans omk
+                liensArgu.append('a')
+                    .attr('href',d=>'https://argument.generateur.art/admin/item/'+d['o:id'])
+                    .attr('target','_blanck')
+                    .text(d=>d["o:title"]);
+                //le bouton de génération
+                liensArgu.append('button')
+                    .text('Générer des arguments')
+                    .on('click',genereArgument);
+
+                //et le div de résultat
+                argus.append('div').attr('id',d=>"resultArgu"+d['o:id']).attr('class','result');
+            })
+        }
+
+        function genereArgument(e,arg){
+            let argu = d3.select('#resultArgu'+arg['o:id']);
+            argu.select('div').remove();            
+            let divTxtArgu = argu.append('div');
+            divTxtArgu.selectAll('span').data(arg["argu:generateur"]).enter().append('span')
+                .attr('id',(g,i)=>{
+                    g.idSpan = 'span'+arg['o:id']+'_'+i;
+                    return g.idSpan;
+                })
+                .text((g,i)=>{
+                    if(i>0){
+                        if(g.type=='literal')return g['@value'];
+                        if(g.type=='resource'){
+                            getAleaDescription(g);
+                        }
+                    }
+                })
+
+        }
+        function getAleaDescription(d){
+            d3.json(d['@id'])
+                .then(rs=>{
+                    //récupère les description des la ressource
+                    let listeDesc = rs['dcterms:description'],
+                    //choisi une description dans la liste
+                    alea = d3.randomInt(listeDesc.length-1)(), 
+                    choixDesc = listeDesc[alea];
+                    //affiche le description choisie
+                    d3.select('#'+d.idSpan).attr("class","gen").text(choixDesc['@value']+" ("+(alea+1)+"/"+listeDesc.length+") ");
+                });
+        }         
+
+    </script>
+</body>
+</html>
